; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_zscale.c_convert_trc.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_zscale.c_convert_trc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZIMG_TRANSFER_UNSPECIFIED = common dso_local global i32 0, align 4
@ZIMG_TRANSFER_709 = common dso_local global i32 0, align 4
@ZIMG_TRANSFER_470_M = common dso_local global i32 0, align 4
@ZIMG_TRANSFER_470_BG = common dso_local global i32 0, align 4
@ZIMG_TRANSFER_601 = common dso_local global i32 0, align 4
@ZIMG_TRANSFER_240M = common dso_local global i32 0, align 4
@ZIMG_TRANSFER_LINEAR = common dso_local global i32 0, align 4
@ZIMG_TRANSFER_LOG_100 = common dso_local global i32 0, align 4
@ZIMG_TRANSFER_LOG_316 = common dso_local global i32 0, align 4
@ZIMG_TRANSFER_IEC_61966_2_4 = common dso_local global i32 0, align 4
@ZIMG_TRANSFER_2020_10 = common dso_local global i32 0, align 4
@ZIMG_TRANSFER_2020_12 = common dso_local global i32 0, align 4
@ZIMG_TRANSFER_ST2084 = common dso_local global i32 0, align 4
@ZIMG_TRANSFER_ARIB_B67 = common dso_local global i32 0, align 4
@ZIMG_TRANSFER_IEC_61966_2_1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @convert_trc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @convert_trc(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %35 [
    i32 128, label %5
    i32 139, label %7
    i32 138, label %9
    i32 137, label %11
    i32 131, label %13
    i32 129, label %15
    i32 134, label %17
    i32 133, label %19
    i32 132, label %21
    i32 135, label %23
    i32 141, label %25
    i32 140, label %27
    i32 130, label %29
    i32 142, label %31
    i32 136, label %33
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @ZIMG_TRANSFER_UNSPECIFIED, align 4
  store i32 %6, i32* %2, align 4
  br label %37

7:                                                ; preds = %1
  %8 = load i32, i32* @ZIMG_TRANSFER_709, align 4
  store i32 %8, i32* %2, align 4
  br label %37

9:                                                ; preds = %1
  %10 = load i32, i32* @ZIMG_TRANSFER_470_M, align 4
  store i32 %10, i32* %2, align 4
  br label %37

11:                                               ; preds = %1
  %12 = load i32, i32* @ZIMG_TRANSFER_470_BG, align 4
  store i32 %12, i32* %2, align 4
  br label %37

13:                                               ; preds = %1
  %14 = load i32, i32* @ZIMG_TRANSFER_601, align 4
  store i32 %14, i32* %2, align 4
  br label %37

15:                                               ; preds = %1
  %16 = load i32, i32* @ZIMG_TRANSFER_240M, align 4
  store i32 %16, i32* %2, align 4
  br label %37

17:                                               ; preds = %1
  %18 = load i32, i32* @ZIMG_TRANSFER_LINEAR, align 4
  store i32 %18, i32* %2, align 4
  br label %37

19:                                               ; preds = %1
  %20 = load i32, i32* @ZIMG_TRANSFER_LOG_100, align 4
  store i32 %20, i32* %2, align 4
  br label %37

21:                                               ; preds = %1
  %22 = load i32, i32* @ZIMG_TRANSFER_LOG_316, align 4
  store i32 %22, i32* %2, align 4
  br label %37

23:                                               ; preds = %1
  %24 = load i32, i32* @ZIMG_TRANSFER_IEC_61966_2_4, align 4
  store i32 %24, i32* %2, align 4
  br label %37

25:                                               ; preds = %1
  %26 = load i32, i32* @ZIMG_TRANSFER_2020_10, align 4
  store i32 %26, i32* %2, align 4
  br label %37

27:                                               ; preds = %1
  %28 = load i32, i32* @ZIMG_TRANSFER_2020_12, align 4
  store i32 %28, i32* %2, align 4
  br label %37

29:                                               ; preds = %1
  %30 = load i32, i32* @ZIMG_TRANSFER_ST2084, align 4
  store i32 %30, i32* %2, align 4
  br label %37

31:                                               ; preds = %1
  %32 = load i32, i32* @ZIMG_TRANSFER_ARIB_B67, align 4
  store i32 %32, i32* %2, align 4
  br label %37

33:                                               ; preds = %1
  %34 = load i32, i32* @ZIMG_TRANSFER_IEC_61966_2_1, align 4
  store i32 %34, i32* %2, align 4
  br label %37

35:                                               ; preds = %1
  %36 = load i32, i32* @ZIMG_TRANSFER_UNSPECIFIED, align 4
  store i32 %36, i32* %2, align 4
  br label %37

37:                                               ; preds = %35, %33, %31, %29, %27, %25, %23, %21, %19, %17, %15, %13, %11, %9, %7, %5
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
